# sensirion-ble

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/sensirion_ble/: __init__.py  const.py  converters.py  parser.py  types.py
tests/: test_parser.py
